--- a/downstream_tasks/i2b2_preprocessing/i2b2_2010_relations/Reformat.ipynb
+++ b/downstream_tasks/i2b2_preprocessing/i2b2_2010_relations/Reformat.ipynb
@@ -28,7 +28,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "73\r\n"
+      "73\n"
      ]
     }
    ],
@@ -50,7 +50,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "97\r\n"
+      "97\n"
      ]
     }
    ],
@@ -73,7 +73,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[0m\u001b[01;34mast\u001b[0m/  \u001b[01;34mconcept\u001b[0m/  \u001b[01;34mrel\u001b[0m/  \u001b[01;34mtxt\u001b[0m/\r\n"
+      "\u001b[0m\u001b[01;34mast\u001b[0m/  \u001b[01;34mconcept\u001b[0m/  \u001b[01;34mrel\u001b[0m/  \u001b[01;34mtxt\u001b[0m/\n"
      ]
     }
    ],
@@ -254,12 +254,12 @@
      "data": {
       "text/plain": [
        "{'O': 'O',\n",
-       " 'B-test': 'B-test',\n",
-       " 'I-test': 'I-test',\n",
+       " 'B-treatment': 'B-treatment',\n",
+       " 'I-treatment': 'I-treatment',\n",
        " 'B-problem': 'B-problem',\n",
        " 'I-problem': 'I-problem',\n",
-       " 'B-treatment': 'B-treatment',\n",
-       " 'I-treatment': 'I-treatment'}"
+       " 'B-test': 'B-test',\n",
+       " 'I-test': 'I-test'}"
       ]
      },
      "execution_count": 8,
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -3012,7 +3012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3021,7 +3021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3035,7 +3035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -3052,7 +3052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3066,7 +3066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -3083,7 +3083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -3102,7 +3102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3119,14 +3119,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Merged # Samples: Train: 14251, Dev: 2064, Test: 27626\n"
+      "Merged # Samples: Train: 14384, Dev: 1931, Test: 27626\n"
      ]
     }
    ],
@@ -3140,7 +3140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3155,7 +3155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3172,7 +3172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3195,9 +3195,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "local [~/.conda/envs/local/]",
    "language": "python",
-   "name": "python3"
+   "name": "conda_local"
   },
   "language_info": {
    "codemirror_mode": {
